Closed Bug 398471 Opened 18 years ago Closed 18 years ago

Widgets translated incorrectly when there is a complex transform.

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cbarrett, Assigned: cbarrett)

References

Details

Attachments

(2 files)

Attached file testcase
See testcase. Notice how the dropdown's widget does not match up with its text. The fact that it draws incorrectly is different bug (will be fixed by using NSCell), as is the push button not drawing right (we should be doing the scaling for buttons using a scale transform, not an offscreen buffer). Attaching patch shortly.
Attached patch fix v1.0Splinter Review
Instead of modifying the origin of macRect, apply a transform with the offset first. This results in further rotates correctly being applied to the device offset. Should vlad look at this too?
Attachment #283460 - Flags: review?(joshmoz)
Attachment #283460 - Flags: review?(joshmoz) → review?(vladimir)
Attachment #283460 - Flags: review?(vladimir)
Attachment #283460 - Flags: review+
Attachment #283460 - Flags: approval1.9+
Checking in widget/src/cocoa/nsNativeThemeCocoa.mm; /cvsroot/mozilla/widget/src/cocoa/nsNativeThemeCocoa.mm,v <-- nsNativeThemeCocoa.mm new revision: 1.61; previous revision: 1.60 done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: