Bug 398471 - Translate widgets correctly when there is a complex transform. r+a1.9=vlad